# OndaCoreana

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  ENVIRONMENT.md  LICENSE  Makefile  OPS_RUNBOOK.md  README.md  astro.config.mjs  docker-compose.yml  keystatic.config.ts  lighthouse-report.json  package-lock.json  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  wrangler.json  wrangler.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.specify/: constitution.md
docs/: INDEX.md  plan.md  (+4 more)
src/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/app/application/dto/: auth.py  content.py
src/backend/app/application/interfaces/: oauth_service.py
src/backend/app/application/use_cases/: auth.py  content.py
src/backend/app/config/: settings.py
src/backend/app/domain/entities/: content.py
src/backend/app/domain/exceptions/: auth.py
src/backend/app/domain/repositories/: content_repository.py
src/backend/app/domain/value_objects/: password.py
src/backend/app/infrastructure/repositories/: __init__.py  supabase_content_repository.py
src/backend/app/presentation/api/: dependencies.py  router.py
src/backend/app/presentation/api/v1/: auth.py  contents.py
src/backend/tests/: __init__.py  test_placeholder.py
src/backend/tests/integration/: test_auth_api.py  test_content_api.py
src/backend/tests/unit/auth/: test_oauth.py
src/backend/tests/unit/content/: test_content_crud.py
src/backend/tests/unit/user/: test_profile.py
(+186 files in other folders)
